--- a/themes/esmyy/layout/layout.ejs
+++ b/themes/esmyy/layout/layout.ejs
@@ -3,9 +3,10 @@
 <%- partial('_partial/head') %>
 <body>
 <div id="esmyy">
+    <%- partial('_partial/header') %>
     <%- body %>
+    <%- partial('_partial/footer') %>
 </div>
-<!--<%- partial('_partial/footer') %>-->
 <%- partial('_partial/script') %>
 </body>
 </html>
