--- a/themes/esmyy/source/css/header.styl
+++ b/themes/esmyy/source/css/header.styl
@@ -1,14 +1,13 @@
-.header-wrapper
+.headerContent
   height 72px
-  border-bottom 1px solid --border-color
   .menus
     height 100%
     display flex
     align-items flex-end
-    margin-left --sidebar-width
+    //margin-left --sidebar-width
     list-style none
     font-size 16px
-    padding-left: 24px;
+    margin-left -16px
     li
       margin 0 16px
       a
