--- a/themes/esmyy/layout/_partial/article-card.ejs
+++ b/themes/esmyy/layout/_partial/article-card.ejs
@@ -3,30 +3,41 @@ var summary = post.excerpt || post.content.replace(/<[^>]*>/ig, ' ').slice(0, 80
 var categories = post.categories.slice(0, 2)
 %>
 <div class="article-card">
-    <div class="title-box">
-        <iconpark-icon name="doc-detail"></iconpark-icon>
-        <a class="title" href=""><%= post.title %></a>
-    </div>
-    <p class="summary"><%= summary %></p>
-    <div class="footer">
-        <div class="item date-box">
-            <iconpark-icon name="calendar"></iconpark-icon>
-            <span class="value"><%= date(post.date, 'YYYY-MM-DD') %></span>
+    <img class="picture"  src="https://avatars.githubusercontent.com/u/20430185?v=4"/>
+    <div class="articleDetail">
+        <div>
+            <div class="title-box">
+                <a class="title" href=""><%= post.title %></a>
+            </div>
+            <p class="summary"><%= summary %></p>
         </div>
-        <div class="item">
-            <iconpark-icon name="folder-open-70fn6ne7"></iconpark-icon>
-            <span class="value">
-                <%- list_categories(post.categories, {
-                    show_count: false,
-                    class: 'article-category',
-                    style: 'none',
-                    separator: ', '
-                }) %>
-            </span>
-        </div>
-        <div class="item">
-            <iconpark-icon name="tag-one"></iconpark-icon>
-            <span class="value">Tag</span>
+        <div class="footer">
+            <div class="item date-box">
+                <iconpark-icon name="calendar"></iconpark-icon>
+                <span class="value"><%= date(post.date, 'YYYY-MM-DD') %></span>
+            </div>
+            <% if (post.tags.length) { %>
+                <div class="item">
+                    <iconpark-icon name="folder-open-70fn6ne7"></iconpark-icon>
+                    <span class="value">
+                    <%- list_categories(post.categories, {
+                        show_count: false,
+                        class: 'article-category',
+                        style: 'none',
+                        separator: ', '
+                    }) %>
+                </span>
+                </div>
+            <% } %>
+
+            <% if (post.tags.length) { %>
+                <div class="item">
+                    <iconpark-icon name="tag-one"></iconpark-icon>
+                    <span class="value">
+                    <%- list_tags(post.tags, {class: 'article-tag', style: 'none', separator: ','}) %>
+                </span>
+                </div>
+            <% } %>
         </div>
     </div>
 </div>
