--- a/themes/esmyy/layout/base.ejs
+++ b/themes/esmyy/layout/base.ejs
@@ -1,6 +1,3 @@
-<div class="page-container">
-    <%- partial('_partial/header') %>
-    <main class="main-content">
-        <%- partial('_partial/sidebar') %>
-    </main>
-</div>
+<main class="page-container">
+
+</main>
