--- a/themes/esmyy/layout/index.ejs
+++ b/themes/esmyy/layout/index.ejs
@@ -3,21 +3,19 @@ var posts = page.posts.data;
 var recentPosts = page.posts.data.slice(0, 6);
 %>
 
-<%- partial('_partial/header') %>
-<main class="main-content">
-  <%- partial('_partial/sidebar') %>
-  <div class="right-content">
-    <div class="article-list">
-      <% recentPosts.forEach(function(post){ %>
-          <%- include('_partial/article-card', {post: post}) %>
-      <% }); %>
-      <% recentPosts.forEach(function(post){ %>
-        <%- include('_partial/article-card', {post: post}) %>
-      <% }); %>
-        <% recentPosts.forEach(function(post){ %>
-          <%- include('_partial/article-card', {post: post}) %>
-        <% }); %>
+<main class="mainContent">
+    <%- partial('_partial/readme') %>
+    <div class="right-content">
+        <div class="article-list">
+          <% recentPosts.forEach(function(post){ %>
+              <%- include('_partial/article-card', {post: post}) %>
+          <% }); %>
+          <% recentPosts.forEach(function(post){ %>
+            <%- include('_partial/article-card', {post: post}) %>
+          <% }); %>
+            <% recentPosts.forEach(function(post){ %>
+              <%- include('_partial/article-card', {post: post}) %>
+            <% }); %>
+        </div>
     </div>
-    <%- partial('_partial/calendar') %>
-  </div>
 </main>
