--- a/themes/esmyy/source/css/base.styl
+++ b/themes/esmyy/source/css/base.styl
@@ -1,15 +1,39 @@
+header,
+footer,
 main
-  max-width 1280px
-  margin 0 auto
-.page-container
   position relative
-.main-content
-  width --main-max-width
+  width 100%;
+
+header
+  height 72px
+  border-bottom 1px solid --border-color
+  .avatar-box
+    position: absolute;
+    top: 12px
+    right  20px
+    .avatar
+      width 50px
+      height 50px
+      border-radius 50%
+      cursor pointer
+      &:hover
+        box-shadow 0 0 8px #6192de
+
+main
+  min-height 100vh
+  width 1120px
   margin 0 auto
-  padding 0 32px;
-  display flex
-.right-content
-  padding: 20px 32px;
+
+footer
+  border-top 1px solid --border-color
+  margin-top 80px
+  padding 16px 0
+  padding-bottom: 30px;
+
+.mainContent
+  width 1120px
+  margin 0 auto
+
 .article-list
   display grid
   grid-template-columns: repeat(2, 50%);
