--- a/themes/esmyy/layout/_partial/article-card.ejs
+++ b/themes/esmyy/layout/_partial/article-card.ejs
@@ -2,8 +2,8 @@
 var summary = post.excerpt || post.content.replace(/<[^>]*>/ig, ' ').slice(0, 80)
 var categories = post.categories.slice(0, 2)
 %>
-<div class="article-card">
-    <img class="picture"  src="https://avatars.githubusercontent.com/u/20430185?v=4"/>
+<div class="articleCard">
+    <img class="picture"  src="https://p26-passport.byteacctimg.com/img/user-avatar/a8b63c3dff7d8860216a1dde87e50688~300x300.image"/>
     <div class="articleDetail">
         <div>
             <div class="title-box">
