--- a/themes/esmyy/source/css/main.styl
+++ b/themes/esmyy/source/css/main.styl
@@ -1,14 +1,14 @@
 @import "./_variables"
 @import "./reset"
-@import "./common"
 @import "./base"
+@import "./common"
 @import "./sidebar"
-@import "article-card"
+@import "partial.styl"
 @import "./navbar"
 @import "./header"
 @import "./code"
 @import "./post"
 @import "./footer"
 @import "./calendar"
-@import "sidebar-fixed"
 @import "readme.styl"
+@import "third-part.css"
