--- a/themes/esmyy/layout/_partial/head.ejs
+++ b/themes/esmyy/layout/_partial/head.ejs
@@ -22,9 +22,13 @@ var favicon = config.favicon || 'https://github.githubassets.com/favicon.ico';
   <% } %>
   <meta name="author" content="<%= config.author %>">
   <meta name="theme-color" content="#1e2327">
-    <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_20170_41.6d6aba20cebf3b3017dcea2335be8f05.js"></script>
+<script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_20170_41.6d6aba20cebf3b3017dcea2335be8f05.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
   <link rel="apple-touch-icon" href="https://github.githubassets.com/apple-touch-icon.png">
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
   <link rel="icon" type="image/x-icon" href="<%= favicon %>">
   <link rel="stylesheet" href="<%= config.root %>css/main.css">
 </head>
