--- a/themes/esmyy/source/css/base.styl
+++ b/themes/esmyy/source/css/base.styl
@@ -34,14 +34,58 @@ footer
   width 1120px
   margin 0 auto
 
-.article-list
-  display grid
-  grid-template-columns: repeat(2, 50%);
-  grid-column-gap: 16px;
-  grid-row-gap: 16px;
+.card
+  height 120px
+  padding 16px
+  padding-bottom: 12px;
+  border 1px solid --border-color
+  border-radius 6px
+
+.center
+  text-align center
+.h-auto
+  height auto
+
 .h-100
   height 100%
 .border
   border 1px solid --border-color
 .radius
   border-radius 6px
+
+// padding
+.p-2
+  padding 2px
+.p-4
+  padding 4px
+.p-6
+  padding 6px
+.p-12
+  padding 12px
+.p-16
+  padding 16px
+.p-20
+  padding 20px
+.p-24
+  padding 24px
+.p-32
+  padding 32px
+
+
+// mt
+.mt-2
+  margin-top  2px
+.mt-4
+  margin-top  4px
+.mt-6
+  margin-top 6px
+.mt-12
+  margin-top 12px
+.mt-16
+  margin-top 16px
+.mt-20
+  margin-top 20px
+.mt-24
+  margin-top 24px
+.mt-32
+  margin-top 32px
