--- a/themes/esmyy/source/css/partial.styl
+++ b/themes/esmyy/source/css/partial.styl
@@ -1,4 +1,5 @@
-.article-card
+// articleCard
+.articleCard
   min-width 320px
   height 150px
   padding 16px
@@ -8,6 +9,7 @@
   box-sizing border-box
   display flex
   position: relative;
+  margin-bottom: 12px;
   .picture
     width 120px
     height 120px
