feat: update 首页

--- a/themes/esmyy/layout/_partial/footer.ejs
+++ b/themes/esmyy/layout/_partial/footer.ejs
@@ -1,9 +1,9 @@
 <footer>
-    <div class="mainContent">
-        <ul class="menus">
+    <div class="mainContent footBar">
+        <p class="aboutMe">
             <a href="/about">
-                <span>About Me</span>
-            </a>
-        </ul>
+                About Me
+            </a></p>
+        <p class="copyright">2022 By esmyy</p>
     </div>
 </footer>
