--- a/themes/esmyy/source/css/main.styl
+++ b/themes/esmyy/source/css/main.styl
@@ -10,5 +10,6 @@
 @import "./post"
 @import "./footer"
 @import "./calendar"
+@import "homepage.styl"
 @import "readme.styl"
 @import "third-part.css"
