--- a/themes/esmyy/source/css/base.styl
+++ b/themes/esmyy/source/css/base.styl
@@ -34,10 +34,12 @@ footer
   width 1120px
   margin 0 auto
 
+a
+  cursor: pointer;
+  color: #0969da;
 .card
   height 120px
-  padding 16px
-  padding-bottom: 12px;
+  padding 14px 16px
   border 1px solid --border-color
   border-radius 6px
 
@@ -79,6 +81,8 @@ footer
   margin-top  4px
 .mt-6
   margin-top 6px
+.mt-8
+  margin-top 8px
 .mt-12
   margin-top 12px
 .mt-16
@@ -89,3 +93,13 @@ footer
   margin-top 24px
 .mt-32
   margin-top 32px
+
+.overflowEllipse
+  position: relative;
+  &::after
+    content: "...";
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background-color: #fff;
+    width: 19px;
