--- a/themes/esmyy/source/css/partial.styl
+++ b/themes/esmyy/source/css/partial.styl
@@ -9,13 +9,13 @@
   box-sizing border-box
   display flex
   position: relative;
-  margin-bottom: 12px;
+  //margin-bottom: 12px;
   .picture
     width 120px
     height 120px
     border-radius 4px
   .articleDetail
-    margin-left: 20px;
+    margin-left: 12px;
     height 120px
     display flex
     flex-direction column
