--- a/themes/esmyy/layout/_partial/head.ejs
+++ b/themes/esmyy/layout/_partial/head.ejs
@@ -22,8 +22,8 @@ var favicon = config.favicon || 'https://github.githubassets.com/favicon.ico';
   <% } %>
   <meta name="author" content="<%= config.author %>">
   <meta name="theme-color" content="#1e2327">
-    <script src="<%= config.root %>js/headScript.js" />
-    <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_20170_41.6d6aba20cebf3b3017dcea2335be8f05.js"></script>
+    <script src="<%= config.root %>js/headScript.js"></script>
+    <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_20170_43.4b492a4375df6731d5fe594c52169750.js"></script>
   <link rel="apple-touch-icon" href="https://github.githubassets.com/apple-touch-icon.png">
   <link rel="icon" type="image/x-icon" href="<%= favicon %>">
   <link rel="stylesheet" href="<%= config.root %>css/main.css">
