--- a/themes/esmyy/source/css/third-part.css
+++ b/themes/esmyy/source/css/third-part.css
@@ -118,48 +118,33 @@
   display: none;
 }
 
-/* Icons */
-@font-face
-{
-  font-family: 'slick';
-  font-weight: normal;
-  font-style: normal;
-
-}
 /* Arrows */
 .slick-prev,
 .slick-next
 {
-  font-size: 0;
-  line-height: 0;
-
+  width: 60px;
+  height: 60px;
+  background-color: red;
+  border-radius: 50%;
   position: absolute;
-  top: 50%;
-
-  display: block;
-
-  width: 20px;
-  height: 20px;
-  padding: 0;
-  -webkit-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-
-  cursor: pointer;
-
-  color: transparent;
-  border: none;
-  outline: none;
-  background: transparent;
+  top: 50%
+}
+.slick-prev {
+  left: -80px;
+  transform: translate(-50%);
+}
+.slick-next {
+  right: -140px;
+  transform: translate(-50%);
 }
 .slick-prev:hover,
 .slick-prev:focus,
 .slick-next:hover,
 .slick-next:focus
 {
-  color: transparent;
+  /* color: transparent; */
   outline: none;
-  background: transparent;
+  /* background: transparent; */
 }
 .slick-prev:hover:before,
 .slick-prev:focus:before,
@@ -171,57 +156,6 @@
 .slick-prev.slick-disabled:before,
 .slick-next.slick-disabled:before
 {
-  opacity: .25;
-}
-
-.slick-prev:before,
-.slick-next:before
-{
-  font-family: 'slick';
-  font-size: 20px;
-  line-height: 1;
-
-  opacity: .75;
-  color: white;
-
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.slick-prev
-{
-  left: -25px;
-}
-[dir='rtl'] .slick-prev
-{
-  right: -25px;
-  left: auto;
-}
-.slick-prev:before
-{
-  content: '←';
-}
-[dir='rtl'] .slick-prev:before
-{
-  content: '→';
-}
-
-.slick-next
-{
-  right: -25px;
-}
-[dir='rtl'] .slick-next
-{
-  right: auto;
-  left: -25px;
-}
-.slick-next:before
-{
-  content: '→';
-}
-[dir='rtl'] .slick-next:before
-{
-  content: '←';
 }
 
 /* Dots */
