feat: 首页添加图片文案展示

--- a/themes/esmyy/layout/index.ejs
+++ b/themes/esmyy/layout/index.ejs
@@ -3,6 +3,8 @@ var posts = page.posts.data;
 var recentPosts = page.posts.data.slice(0, 6);
 var currentPage = 1;
 %>
+<%- partial('_partial/first-screen.ejs') %>
+<%- partial('_partial/header.ejs') %>
 <main class="mainContent homePageMainContent">
     <div class="recentList">
         <div class="recentLeft">
