--- a/themes/esmyy/layout/_partial/header.ejs
+++ b/themes/esmyy/layout/_partial/header.ejs
@@ -7,44 +7,44 @@ var timelineActive = /timeline/.test(pathname)
 var homeActive = !(pictureActive||talkActive||readingActive||timelineActive)
 %>
 <header>
-    <div class="mainContent headerContent">
-        <ul class="menus">
-            <li class="<%= homeActive ? 'selected' : '' %>">
-                <a href="/">
-                    <iconpark-icon name="book-open"></iconpark-icon>
-                    <span>首页</span>
-                </a>
-            </li>
-            <li class="<%= readingActive ? 'selected' : '' %>">
-                <a href="/reading">
-                    <iconpark-icon name="read-book"></iconpark-icon>
-                    <span>读书</span>
-                </a>
-            </li>
-            <li class="<%= pictureActive ? 'selected' : '' %>">
-                <a href="/pictures">
-                    <iconpark-icon name="camera"></iconpark-icon>
-                    <span>相册</span>
-                </a>
-            </li>
-            <li class="<%= talkActive ? 'selected' : '' %>">
-                <a href="/talk">
-                    <iconpark-icon name="message-emoji"></iconpark-icon>
-                    <span>随笔</span>
-                </a>
-            </li>
-            <li class="<%= timelineActive ? 'selected' : '' %>">
-                <a href="/timeline">
-                    <iconpark-icon name="calendar-thirty-two"></iconpark-icon>
-                    <span>时间轴</span>
-                </a>
-            </li>
-        </ul>
-    </div>
+  <div class="mainContent headerContent">
+    <ul class="menus">
+      <li class="<%= homeActive ? 'selected' : '' %>">
+        <a href="/">
+          <iconpark-icon name="book-open"></iconpark-icon>
+          <span>首页</span>
+        </a>
+      </li>
+      <li class="<%= readingActive ? 'selected' : '' %>">
+        <a href="/reading">
+          <iconpark-icon name="read-book"></iconpark-icon>
+          <span>读书</span>
+        </a>
+      </li>
+      <li class="<%= pictureActive ? 'selected' : '' %>">
+        <a href="/pictures">
+          <iconpark-icon name="camera"></iconpark-icon>
+          <span>相册</span>
+        </a>
+      </li>
+      <li class="<%= talkActive ? 'selected' : '' %>">
+        <a href="/talk">
+          <iconpark-icon name="message-emoji"></iconpark-icon>
+          <span>随笔</span>
+        </a>
+      </li>
+      <li class="<%= timelineActive ? 'selected' : '' %>">
+        <a href="/timeline">
+          <iconpark-icon name="calendar-thirty-two"></iconpark-icon>
+          <span>时间轴</span>
+        </a>
+      </li>
+    </ul>
+  </div>
 
-    <!--  avatar  -->
-    <a class="avatar-box" href="https://github.com/esmyy">
-        <img class="avatar" src="https://avatars.githubusercontent.com/u/20430185?v=4" alt="马月月头像">
-        <div class="status-box"></div>
-    </a>
+  <!--  avatar  -->
+  <a class="avatar-box" href="https://github.com/esmyy">
+    <img class="avatar" src="https://avatars.githubusercontent.com/u/20430185?v=4" alt="马月月头像" />
+    <div class="status-box"></div>
+  </a>
 </header>
