--- a/themes/esmyy/layout/_partial/footer.ejs
+++ b/themes/esmyy/layout/_partial/footer.ejs
@@ -4,6 +4,6 @@
             <a href="/about">
                 About Me
             </a></p>
-        <p class="copyright">2022 By esmyy</p>
+        <p class="copyright">@2022 By esmyy</p>
     </div>
 </footer>
