--- a/themes/esmyy/layout/_partial/head.ejs
+++ b/themes/esmyy/layout/_partial/head.ejs
@@ -1,6 +1,6 @@
 <%
 var tags = page.tags ? page.tags.data : '';
-var favicon = config.favicon || 'https://github.githubassets.com/favicon.ico';
+var favicon = config.favicon
 %>
 
 <head>
@@ -23,7 +23,7 @@ var favicon = config.favicon || 'https://github.githubassets.com/favicon.ico';
   <meta name="author" content="<%= config.author %>">
   <meta name="theme-color" content="#1e2327">
     <script src="<%= config.root %>js/headScript.js"></script>
-    <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_20170_45.d43c570e90b0ec789111c167c3ea3ec2.js"></script>
+    <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_20170_46.9093dbd766690862bebeb6b9021a824f.js"></script>
   <link rel="apple-touch-icon" href="https://github.githubassets.com/apple-touch-icon.png">
   <link rel="icon" type="image/x-icon" href="<%= favicon %>">
   <link rel="stylesheet" href="<%= config.root %>css/main.css">
