--- a/themes/esmyy/layout/index.ejs
+++ b/themes/esmyy/layout/index.ejs
@@ -1,71 +1,56 @@
 <%
 var posts = page.posts.data;
-var recentPosts = page.posts.data.slice(0, 6);
-var currentPage = 1;
+var recentPosts = page.posts;
 %>
+<% if (page.current === 1) {%>
 <%- partial('_partial/first-screen.ejs') %>
+<% } %>
 <%- partial('_partial/header.ejs') %>
 <main class="mainContent homePageMainContent">
-    <div class="recentList">
-        <div class="recentLeft">
-            <div class="recentCard card lifeCard">
-                <p class="cardTitle">^_^</p>
-                <p class="mt-16">喜怒哀乐，柴米油盐</p>
-            </div>
-            <div class="recentCard card readingCard ">
-                <p class="cardTitle bookName">《平凡的世界》...</p>
-                <p class="readingCardContent mt-4">1975年初农民子弟孙少平到原西县高中读书，他贫困，自卑；后对处境相同的地主家庭出身的郝红梅产生情愫，在被同班同学侯玉英发现并当众说破后，与郝红梅关系渐变恶劣，后来郝红梅却与家境优越的顾养民恋爱。少平高中毕业，回到家乡做了一名教师。</p>
-            </div>
-        </div>
-        <div class="recentRight">
-            <div class="recentCard talkCard card">
-                <p class="talkCardContent">我们都是平凡的人，在平凡的世界里或者</p>
-            </div>
-            <div class="recentCard recentPictureSlider">
-                <div>
-                    <img data-lazy="https://p26-passport.byteacctimg.com/img/user-avatar/a8b63c3dff7d8860216a1dde87e50688~300x300.image"/>
-                </div>
-                <div>
-                    <img data-lazy="https://p26-passport.byteacctimg.com/img/user-avatar/a8b63c3dff7d8860216a1dde87e50688~300x300.image"/>
-                </div>
-                <div>                <img data-lazy="https://cdn.pixabay.com/photo/2022/08/31/09/06/pumpkin-7422802_960_720.jpg"/>
-                </div>
-                <div>
-                    <img data-lazy="https://p26-passport.byteacctimg.com/img/user-avatar/a8b63c3dff7d8860216a1dde87e50688~300x300.image"/>
-
-                </div>
-            </div>
-        </div>
+  <div class="recentList">
+    <div class="recentLeft">
+      <div class="recentCard talkCard card">
+        <p class="talkCardContent overflowEllipse">
+        <iconpark-icon name="speaker-one"></iconpark-icon>
+          我们都是平凡的人，在平凡的世界里或者我们都是平凡的人，在平凡的世界里或者我们都是平凡的人，在平凡的世界里或者我们都是平凡的人，在平凡的世界里或者
+        </p>
+      </div>
+      <div class="recentCard card readingCard ">
+        <p class="cardTitle bookName"><iconpark-icon name="read-book"></iconpark-icon>《平凡的世界》</p>
+        <p class="readingCardContent mt-2 overflowEllipse">1975年初农民子弟孙少平到原西县高中读书，他贫困，自卑；后对处境相同的地主家庭出身的郝红梅产生情愫，在被同班同学侯玉英发现并当众说破后，与郝红梅关系渐变恶劣，后来郝红梅却与家境优越的顾养民恋爱。少平高中毕业，回到家乡做了一名教师。</p>
+      </div>
     </div>
-    <div class="articleList">
-        <% recentPosts.forEach(function(post){ %>
-            <%- include('_partial/article-card', {post: post}) %>
-        <% }); %>
-        <% recentPosts.forEach(function(post){ %>
-            <%- include('_partial/article-card', {post: post}) %>
-        <% }); %>
-        <% recentPosts.forEach(function(post){ %>
-            <%- include('_partial/article-card', {post: post}) %>
-        <% }); %>
-
+    <div class="recentRight">
+      <div class="recentCard recentPictureSlider">
+        <div class="picture" style="background-image:url(<%= config.recentPicture.one.image %>)"></div>
+        <div class="picture" style="background-image:url(<%= config.recentPicture.two.image %>)"></div>
+        <div class="picture" style="background-image:url(<%= config.recentPicture.three.image %>)"></div>
+        <div class="picture" style="background-image:url(<%= config.recentPicture.four.image %>)"></div>
+      </div>
     </div>
-    <div class="paginatorWrapper">
-        <%- paginator({
+  </div>
+  <div class="articleList">
+    <% recentPosts.forEach(function(post){ %>
+    <%- include('_partial/article-card', {post: post}) %>
+    <% }); %>
+  </div>
+  <div class="paginatorWrapper">
+    <%- paginator({
             base: '/',
-            current: 1,
-            total: 100,
+            current: page.current,
+            total: page.total,
             prev_next: true,
             page_class: 'pageNum',
-            next_text: '',
-            prev_text: '上一页'
+            next_text: '>',
+            prev_text: ''
         }) %>
-    </div>
+  </div>
 </main>
 <script>
-    $(".recentPictureSlider").slick({
-      lazyLoad: 'ondemand',
-      slidesToShow: 3,
-      slidesToScroll: 1,
-      autoplay: true
-    });
-    </script>
+  $(".recentPictureSlider").slick({
+    lazyLoad: 'ondemand',
+    slidesToShow: 3,
+    slidesToScroll: 1,
+    autoplay: true
+  });
+</script>
