--- a/themes/esmyy/source/css/base.styl
+++ b/themes/esmyy/source/css/base.styl
@@ -99,7 +99,7 @@ a
   &::after
     content: "...";
     position: absolute;
-    right: 0;
-    bottom: 0;
-    background-color: #fff;
+    right: 2px;
+    bottom: 0px;
+    background-color: transparent;
     width: 19px;
