--- a/themes/esmyy/source/css/first-screen.styl
+++ b/themes/esmyy/source/css/first-screen.styl
@@ -9,6 +9,8 @@
     display: none;
     opacity 0;
     transition: opacity 1s ease;
+    animation: firstScreenHidden 10s infinite;
+
   .lifeCard
     position absolute
     left: 50%
