--- a/themes/esmyy/layout/_partial/article-card.ejs
+++ b/themes/esmyy/layout/_partial/article-card.ejs
@@ -3,11 +3,13 @@ var summary = post.excerpt || post.content.replace(/<[^>]*>/ig, ' ').slice(0, 80
 var categories = post.categories.slice(0, 2)
 %>
 <div class="articleCard">
-    <img class="picture"  src="https://p26-passport.byteacctimg.com/img/user-avatar/a8b63c3dff7d8860216a1dde87e50688~300x300.image"/>
+    <% if (post.poster) { %>
+        <img class="picture" src="<%= post.poster %>"/>
+    <% } %>
     <div class="articleDetail">
         <div>
             <div class="title-box">
-                <a class="title" href=""><%= post.title %></a>
+                <a class="title" href="<%= post.path %>"><%= post.title %></a>
             </div>
             <p class="summary"><%= summary %></p>
         </div>
