--- a/themes/esmyy/source/css/main.styl
+++ b/themes/esmyy/source/css/main.styl
@@ -1,4 +1,5 @@
 @import "./_variables"
+@import "_extend"
 @import "./reset"
 @import "./base"
 @import "./common"
@@ -17,3 +18,5 @@
 @import "picture.styl"
 @import "first-screen.styl"
 @import "scrolldown.css"
+@import "article"
+@import "toc"
