--- a/themes/esmyy/layout/_partial/article.ejs
+++ b/themes/esmyy/layout/_partial/article.ejs
@@ -1,31 +1,33 @@
-<%
-var publishTimestamp = page.date.valueOf();
-var article_edit = config.article_edit || {};
-%>
-<div class="post-container container">
-  <h3>
-    <i class="fa fa-user-o"></i>
-    <%= config.author || '' %>
+<article class="mainContent articleContent">
+  <div  data-scroll-reveal>
+    <% if (post.title){ %>
+    <div class="articleHeader">
+      <h1><%= post.title %></h1>
+    </div>
+    <% } %>
 
-    <span class="post-date float-right" title="{{moment(<%= publishTimestamp %>).format('MMM DD, YYYY, h:mm:ss A')}}">
-      <% if(article_edit.enable){ %>
-      <a class="fa fa-pencil-square-o" href="<%= article_edit.prefix%><%= page.source%>" target="_blank">
-      </a>
-      <% }else{ %>
-          <i class="fa fa-pencil-square-o"></i>
-      <%  } %>
-      {{moment(<%= publishTimestamp %>).fromNow()}}
-    </span>
-  </h3>
+    <div class="articleMeta">
+      <iconpark-icon name="calendar"></iconpark-icon>
+      <span class="date"><%= date(post.date) %></span>
+    </div>
 
-  <article class="post-content">
-    <h1><%= page.title || 'Untitle' %></h1>
-    <%- page.content %>
-  </article>
-</div>
-
-<% if (config.gitalk ) { %>
-    <%- partial('_widget/gitalk') %>
-<% }else{ %>
-    <%- partial('_widget/disqus') %>
-<% } %>
+    <div class="articleBody" itemprop="articleBody">
+      <%- partial('post/justifiedGallery') %>
+      <% if (index){ %>
+      <%- partial('post/gallery') %>
+      <% } %>
+      <% if (post.excerpt && index){ %>
+      <%- post.excerpt %>
+      <% if (config.excerpt_link){ %>
+      <p>
+        <a class="article-more-link" href="<%- url_for(post.path) %>">
+          <%= config.excerpt_link %>
+        </a>
+      </p>
+      <% } %>
+      <% } else { %>
+      <%- post.content %>
+      <% } %>
+    </div>
+  </div>
+</article>
