--- a/themes/esmyy/layout/layout.ejs
+++ b/themes/esmyy/layout/layout.ejs
@@ -6,5 +6,15 @@
     <%- body %>
     <%- partial('_partial/footer') %>
 </div>
+<script>
+hljs.initHighlightingOnLoad();
+</script>
+<script src="/js/scrollreveal.js"></script>
+<script>
+const eles = document.querySelectorAll('[data-scroll-reveal]')
+eles.forEach(elem => {
+    ScrollReveal().reveal(elem)
+})
+</script>
 </body>
 </html>
