--- a/themes/esmyy/layout/post.ejs
+++ b/themes/esmyy/layout/post.ejs
@@ -1,2 +1,2 @@
 <%- partial('_partial/header') %>
-<%- partial('_partial/article') %>
+<%- partial('_partial/article', {post: page, index: false}) %>
