--- a/themes/esmyy/source/css/base.styl
+++ b/themes/esmyy/source/css/base.styl
@@ -30,13 +30,18 @@ footer
   padding 16px 0
   padding-bottom: 30px;
 
-.mainContent
-  width 1120px
-  margin 0 auto
 
 a
   cursor: pointer;
   color: #0969da;
+
+code
+  border-radius: 4px;
+
+.mainContent
+  width 1120px
+  margin 0 auto
+
 .card
   height 120px
   padding 14px 16px
