--- a/themes/esmyy/source/css/post.styl
+++ b/themes/esmyy/source/css/post.styl
@@ -1,5 +1,6 @@
 .post
   &-container
+    width: --main-width
     border: $border-grey
     border-radius: 3px
     margin-bottom: 30px
@@ -16,8 +17,6 @@
       line-height: 17px
       border-bottom: 1px solid $grey-border
       border-radius(3px 3px 0 0)
-      @media (max-width: $screen-sm)
-        padding: 15px
   &-date
     font-size: 13px
     line-height: 20px
@@ -25,10 +24,6 @@
     font-weight: normal
 
   &-content
-    @media (max-width: $screen-sm)
-      padding: 15px
-      font-size: 15px
-    padding: 45px
     word-wrap: break-word
     font-family: $font-family-main
     font-size: 16px
