--- a/themes/esmyy/source/css/reset.styl
+++ b/themes/esmyy/source/css/reset.styl
@@ -6,7 +6,7 @@ body {
   line-height: 1.5;
   font-size: 14px;
   color --default-color;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Lato, Roboto, 'PingFang SC', 'Microsoft YaHei', sans-serif
 }
 
 
@@ -122,6 +122,41 @@ h5,
 h6 {
   font-size: 100%;
   font-variant: normal;
+}
+
+h1 {
+    font-size: 32px;
+    font-weight: 600
+}
+
+h2 {
+    font-size: 24px;
+    font-weight: 600
+}
+
+h3 {
+    font-size: 20px;
+    font-weight: 600
+}
+
+h4 {
+    font-size: 16px;
+    font-weight: 600
+}
+
+h5 {
+    font-size: 14px;
+    font-weight: 600
+}
+
+h6 {
+    font-size: 12px;
+    font-weight: 600
+}
+
+p {
+    margin-top: 0;
+    margin-bottom: 10px
 }
 .clearfix:before,
 .clearfix:after {
