feat: 调整代码高亮

--- a/themes/esmyy/layout/layout.ejs
+++ b/themes/esmyy/layout/layout.ejs
@@ -7,7 +7,7 @@
     <%- partial('_partial/footer') %>
 </div>
 <script>
-hljs.initHighlightingOnLoad();
+// hljs.initHighlightingOnLoad();
 </script>
 <script src="/js/scrollreveal.js"></script>
 <script>
