--- a/themes/esmyy/source/css/_extend.styl
+++ b/themes/esmyy/source/css/_extend.styl
@@ -9,7 +9,7 @@ $block
 
 $base-style
   h1, h2, h3, h4, h5, h6
-    margin 1.5rem 0
+    margin: 2rem 0 1rem 0;
   hr
     height border-width
     background-color border-color
@@ -45,7 +45,11 @@ $base-style
 
   p, table, blockquote
     margin 1.5rem 0
-
+  h1 +p,
+  h2 +p,
+  h3 +p,
+  h4 +p
+    margin-top: 1rem !important;
   img, video
     max-width 100%
     height auto
