--- a/themes/esmyy/source/css/_extend.styl
+++ b/themes/esmyy/source/css/_extend.styl
@@ -53,7 +53,7 @@ $base-style
   img, video
     max-width 100%
     height auto
-    display block
+    display inline-block
     margin auto
   iframe
     border none
