--- a/themes/esmyy/source/css/_variables.styl
+++ b/themes/esmyy/source/css/_variables.styl
@@ -1,7 +1,9 @@
 --default-color = #24292f
+--color-primary = #0969da;
 --border-color = rgb(216, 222,228)
 
---color-primary = #0969da
+// --color-primary = #b3dcf5
+
 
 // size
 --sidebar-width = 296px
