--- a/themes/esmyy/layout/_partial/article-card.ejs
+++ b/themes/esmyy/layout/_partial/article-card.ejs
@@ -1,5 +1,5 @@
 <%
-var summary = post.excerpt || post.content.replace(/<[^>]*>/ig, ' ').slice(0, 80)
+var summary = post.excerpt || post.content.replace(/<[^>]*>/ig, ' ').slice(0, 160)
 var categories = post.categories.slice(0, 2)
 %>
 <div class="articleCard">
@@ -18,16 +18,11 @@ var categories = post.categories.slice(0, 2)
                 <iconpark-icon name="calendar"></iconpark-icon>
                 <span class="value"><%= date(post.date, 'YYYY-MM-DD') %></span>
             </div>
-            <% if (post.tags.length) { %>
+            <% if (post.categories.length) { %>
                 <div class="item">
                     <iconpark-icon name="folder-open-70fn6ne7"></iconpark-icon>
                     <span class="value">
-                    <%- list_categories(post.categories, {
-                        show_count: false,
-                        class: 'article-category',
-                        style: 'none',
-                        separator: ', '
-                    }) %>
+                    <%- partial('_partial/tags', { isPure: true, tags: post.categories}) %>
                 </span>
                 </div>
             <% } %>
@@ -36,8 +31,8 @@ var categories = post.categories.slice(0, 2)
                 <div class="item">
                     <iconpark-icon name="tag-one"></iconpark-icon>
                     <span class="value">
-                    <%- list_tags(post.tags, {class: 'article-tag', style: 'none', separator: ','}) %>
-                </span>
+                    <%- partial('_partial/tags', { isPure: true, tags: post.tags}) %>
+                    </span>
                 </div>
             <% } %>
         </div>
