--- a/themes/esmyy/layout/tag.ejs
+++ b/themes/esmyy/layout/tag.ejs
@@ -1,3 +1,7 @@
-<div>
-    tag
+<div class="tagsWrapper mt-32">
+    <% if (is_page()) {%>
+        <%- partial('_partial/tags.ejs', {tags: site.tags, isPure: false}) %>
+    <%} else {%>
+        <%- partial('_partial/timeline.ejs') %>
+    <%}%>
 </div>
